@@ -1,3 +1,6 @@
+- Add check for missing LODs when colorizing buildings
+
+
 Version 1.1
 
 - (Re)add Colorize and Invert functions
